@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

class Collaborator {

}

class Task {

}

class Entry {
    Status
}


Collaborator "1" -- "0..*" Entry :  >

Task "1" -- "1" Entry : extends
@enduml